[package]
name = "esp-osm"
version = "0.1.0"
authors = ["Jonatan Borkowski <jonatan@thebo.me>", "Maciej Bielecki <zyla@prati.pl>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[patch.crates-io]
embassy-executor = { git = "https://github.com/zyla/embassy", rev = "4e27208fca46" }
embassy-net = { git = "https://github.com/zyla/embassy", rev = "4e27208fca46" }
embassy-net-driver = { git = "https://github.com/zyla/embassy", rev = "4e27208fca46"}
embassy-time = { git = "https://github.com/zyla/embassy", rev = "4e27208fca46" }
embassy-macros = { git = "https://github.com/zyla/embassy", rev = "4e27208fca46" }

esp-hal-common = { path = "./libs/esp-hal/esp-hal-common" }
esp32-hal = { path = "./libs/esp-hal/esp32-hal" }

[dependencies]
esp-backtrace = { version = "0.8.0", features = ["panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { git = "https://github.com/jborkowski/esp-wifi/", rev = "5ad2714", features = ["wifi", "embassy-net", "async"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
heapless = { version = "0.7.14", default-features = false }

embassy-executor = { version = "0.3.0", features = ["nightly", "integrated-timers","executor-thread"] }
embassy-net = { version = "0.1.0", features = ["nightly","tcp","proto-ipv4","medium-ethernet","dhcpv4", "dns", "log", "udp", "medium-ip" ] }
embassy-net-driver = "0.1.0"
embassy-time = { version = "0.1.4", features = ["nightly"]}
embassy-macros = "0.2.1"

embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4"
reqwless = { version = "0.9.0", features = ["log"], default-features = false }

embedded-graphics = "0.8.1"

static_cell = { version = "1.2.0", features = ["nightly"] }
embedded-text = "0.6.6"

# chips
esp32c3-hal = { version = "0.12.0", features=["embassy","async","embassy-time-timg0"], optional = true }
esp32c6-hal = { version = "0.5.0", features=["embassy","async","embassy-time-timg0"], optional = true }
esp32-hal = { version = "0.15.0", features=["embassy","async","embassy-time-timg0", "log"], optional = true }

display-interface = { version = "0.4.1" }
display-interface-spi = "0.4.1"

#incremental-png = { git = "https://github.com/zyla/incremental-png", rev = "e05eaf91f8fd8d10f0dca7ba461c6190520c4f94" }
incremental-png = { path = "../incremental-png" }

embedded-io-async = "0.6.0"
mipidsi = { version = "0.7.1" }
xpt2046 = { version = "0.3.1", path = "libs/xpt2046" }
minipng = "0.1.1"

[features]
default = ["esp32"]

esp32c3 = ["esp32c3-hal", "esp-backtrace/esp32c3", "esp-println/esp32c3", "esp-wifi/esp32c3", "embassy-executor/arch-riscv32"]
esp32c6 = ["esp32c6-hal", "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp-wifi/esp32c6", "embassy-executor/arch-riscv32"]
esp32 = ["esp32-hal", "esp-backtrace/esp32", "esp-println/esp32", "esp-wifi/esp32", "embassy-executor/arch-xtensa"]

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev.package.incremental-png]
opt-level = 3

[profile.dev.package.minipng]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.embedded-graphics]
opt-level = 3

[profile.dev.package.embedded-graphics-core]
opt-level = 3

[profile.dev.package.mipidsi]
opt-level = 3

[profile.dev.package.display-interface]
opt-level = 3

[profile.dev.package.display-interface-spi]
opt-level = 3

[profile.dev.package.esp-hal-common]
opt-level = 3

[profile.dev.package.esp32-hal]
opt-level = 3

[profile.dev.package.esp-osm]
opt-level = 3

[profile.dev]
opt-level = "z"
lto = false

[profile.release]
opt-level = "z"
lto = false
